feat: add /explore/{said} endpoint
